# OpenGLSphere

./: .gitignore  CMakeLists.txt  README.md
include/: Shader.h
opt/glad/include/glad/: glad.h
opt/glad/src/: glad.c
shaders/: player.frag
src/: Platformer.cpp  Shader.cpp
